chore: codebase refactoring